# mcp-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  test_build_failure.txt  test_run.txt
.github/workflows/: ci.yml
bench/: README.md  mcp_bench.cpp
cmake/: mcp-config.cmake.in
examples/: CMakeLists.txt
examples/calculator_server/: CMakeLists.txt  main.cpp
examples/http_calculator_server/: CMakeLists.txt  main.cpp
examples/http_echo_server/: CMakeLists.txt  main.cpp
examples/mcp_notes_server/: CMakeLists.txt  README.md  main.cpp
examples/simple_client/: CMakeLists.txt  echo_client.cpp  main.cpp
examples/simple_server/: CMakeLists.txt  echo_server.cpp
include/mcp/: client.hpp  http_client_transport.hpp  http_server_host.hpp  mcp.hpp  protocol.hpp  server.hpp  session.hpp  stdio_transport.hpp  types.hpp
include/mcp/session/: client_session.hpp  server_session.hpp  session.hpp
include/mcp/transport/: http_sse_transport.hpp  stdio_transport.hpp  transport.hpp
include/mcp/utils/: error.hpp  json_utils.hpp  logging.hpp
src/: CMakeLists.txt  client.cpp  http_client_transport.cpp  http_server_host.cpp  protocol.cpp  server.cpp  session.cpp  stdio_transport.cpp  types.cpp
src/session/: client_session.cpp  server_session.cpp  session.cpp
src/transport/: http_sse_transport.cpp  stdio_transport.cpp
src/utils/: error.cpp  json_utils.cpp  logging.cpp
tests/: CMakeLists.txt  audit_regression_test.cpp  calculator_subprocess_test.cpp  elicitation_test.cpp  error_test.cpp  http_client_transport_test.cpp  http_e2e_test.cpp  http_oauth_test.cpp  in_memory_transport.cpp  in_memory_transport.hpp  log_test.cpp  notes_subprocess_test.cpp  pagination_test.cpp  prompts_test.cpp  protocol_test.cpp  resources_test.cpp  sampling_roots_completion_test.cpp  server_client_integration_test.cpp  session_test.cpp  stdio_transport_test.cpp  tasks_test.cpp  utilities_test.cpp
tests/integration/: client_server_tests.cpp
tests/unit/: additional_session_tests.cpp  client_server_impl_tests.cpp  error_tests.cpp  json_utils_tests.cpp  session_tests.cpp  transport_tests.cpp  types_tests.cpp
