include(GoogleTest)

add_executable(mcp_tests)
target_link_libraries(mcp_tests PRIVATE GTest::gtest_main GTest::gmock)

target_compile_options(mcp_tests PRIVATE
    $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:
        -Wall -Wextra -Wpedantic
    >
)

target_sources(mcp_tests PRIVATE
    log_test.cpp
    error_test.cpp
    protocol_test.cpp
    in_memory_transport.cpp
    session_test.cpp
    server_client_integration_test.cpp
    resources_test.cpp
    prompts_test.cpp
    utilities_test.cpp
    sampling_roots_completion_test.cpp
    elicitation_test.cpp
    tasks_test.cpp
    pagination_test.cpp
    audit_regression_test.cpp
)

# StdioTransport is POSIX-only; so is its test.
if(NOT WIN32)
    target_sources(mcp_tests PRIVATE stdio_transport_test.cpp)
endif()

# Link the core library, or — when HTTP is enabled — mcp::http, which brings
# in mcp transitively (linking both directly would duplicate libmcp.a).
if(MCP_ENABLE_HTTP)
    target_sources(mcp_tests PRIVATE
        http_client_transport_test.cpp
        http_e2e_test.cpp
        http_oauth_test.cpp
    )
    # mcp::http for the SDK's HTTP transport + the MCP_ENABLE_HTTP define;
    # httplib::httplib for the include path, as these tests #include <httplib.h>
    # directly to drive raw HTTP/SSE against the server host.
    target_link_libraries(mcp_tests PRIVATE mcp::http httplib::httplib)
else()
    target_link_libraries(mcp_tests PRIVATE mcp::mcp)
endif()

# The calculator_server subprocess test only builds in if the example is
# being built, since it needs the path of that binary at runtime.
if(MCP_BUILD_EXAMPLES AND TARGET calculator_server)
    target_sources(mcp_tests PRIVATE calculator_subprocess_test.cpp)
endif()
# Same for the notes server (gated on SQLite3 availability).
if(MCP_BUILD_EXAMPLES AND TARGET mcp_notes_server)
    target_sources(mcp_tests PRIVATE notes_subprocess_test.cpp)
endif()

# Subprocess tests need the absolute path of the example binary they
# spawn. Bake the path into a generated header rather than relying on
# the gtest_discover_tests ENVIRONMENT property — different CMake
# versions split a multi-entry ENVIRONMENT differently and drop
# entries silently. The header is conditional on TARGET availability;
# tests #ifdef their way around missing binaries.
set(_test_paths_h "${CMAKE_CURRENT_BINARY_DIR}/test_binary_paths.hpp")
file(GENERATE OUTPUT "${_test_paths_h}" CONTENT
"// Generated by tests/CMakeLists.txt — do not edit.
#pragma once

$<$<TARGET_EXISTS:calculator_server>:#define MCP_TEST_CALCULATOR_SERVER \"$<TARGET_FILE:calculator_server>\">
$<$<TARGET_EXISTS:mcp_notes_server>:#define MCP_TEST_NOTES_SERVER \"$<TARGET_FILE:mcp_notes_server>\">
")
target_include_directories(mcp_tests PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")

gtest_discover_tests(mcp_tests
    DISCOVERY_TIMEOUT 60
)
